# yus

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: alembic.ini
backend/alembic/: env.py
electron/: main.ts  preload.cts  tsconfig.json
release/resources/: app-update.yml
release/resources/backend/: .env.example  pyproject.toml  requirements.txt  run_sidecar.py
release/resources/backend/app/: main.py
release/resources/backend/app/api/routes/: documents.py  sessions.py  stories.py  summaries.py
release/resources/backend/app/core/: container.py
release/resources/backend/app/db/: migrations.py  session.py
release/resources/backend/app/models/: __init__.py  settings.py
release/resources/backend/app/providers/: dashscope_asr.py  protocols.py  registry.py
release/resources/backend/app/schemas/: contracts.py
release/resources/backend/app/services/: audio_storage_service.py
release/resources/backend/app/ws/: event_bus.py  routes.py
scripts/: build-exe.ps1  run-dev.ps1  smoke-settings-audio.ps1  verify-backend.ps1
src/: App.tsx  desktop-api.d.ts  main.tsx
src/components/: Hint.tsx
src/lib/: api.ts  audioCapture.ts  types.ts
src/pages/: HistoryPage.tsx  KnowledgePage.tsx  MeetingPage.tsx  SettingsPage.tsx
src/styles/: app.css
ui-kit/: COMPONENTS.md  README.md  index.js  package-lock.json  package.json
ui-kit/components/: AnimatedList.jsx  Badge.jsx  Button.jsx  CalendarPicker.jsx  Card.jsx  Checkbox.jsx  ColorPicker.jsx  ConfirmModal.jsx  ConfirmSlider.jsx  CustomSelect.jsx  EmptyState.jsx  (+16 more)
(+65 files in other folders)
